simple placeholder <body>

--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,16 @@
 		<title>headspace.ai</title>
 	</head>
 	<body>
-        create anything
-        <input>
+		<nav>
+			<p>headspace.ai</p>
+			<p>my gallery</p>
+			<p>account</p>
+		</nav>
+        <h1>create anything</h1>
+        <input placeholder="a horse wearing a spacesuit">
+		<button>submit</button>
+		<footer>
+		</footer>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
 		<script src="./assets/js/script.js"></script>
 	</body>
