--- a/public/gallery.html
+++ b/public/gallery.html
@@ -3,12 +3,25 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css"/>
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"/>
+		<link
+			rel="stylesheet"
+			href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css"
+		/>
+		<link
+			rel="stylesheet"
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+		/>
 		<link rel="stylesheet" href="./assets/css/style.css" />
 		<title>headspace.ai</title>
 	</head>
 	<body>
+		<nav>
+			<p>headspace.ai</p>
+			<p>my gallery</p>
+			<p>account</p>
+		</nav>
+		<h3>my images</h3>
+		<section></section>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
 		<script src="./assets/js/script.js"></script>
 	</body>
