--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,14 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css"/>
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"/>
+		<link
+			rel="stylesheet"
+			href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css"
+		/>
+		<link
+			rel="stylesheet"
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+		/>
 		<link rel="stylesheet" href="./assets/css/style.css" />
 		<title>headspace.ai</title>
 	</head>
@@ -14,11 +20,10 @@
 			<p>my gallery</p>
 			<p>account</p>
 		</nav>
-        <h1>create anything</h1>
-        <input placeholder="a horse wearing a spacesuit">
+		<h1>create anything</h1>
+		<input placeholder="a horse wearing a spacesuit" />
 		<button>submit</button>
-		<footer>
-		</footer>
+		<footer></footer>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
 		<script src="./assets/js/script.js"></script>
 	</body>
