--- a/public/index.html
+++ b/public/index.html
@@ -15,14 +15,55 @@
 		<title>headspace.ai</title>
 	</head>
 	<body>
-		<nav>
-			<p>headspace.ai</p>
-			<p>my gallery</p>
-			<p>account</p>
+		<nav class="navbar navbar-expand-lg bg-light">
+			<div class="container-fluid">
+				<a class="navbar-brand" href="#">headspace.ai</a>
+				<button
+					class="navbar-toggler"
+					type="button"
+					data-bs-toggle="collapse"
+					data-bs-target="#navbarNavDropdown"
+					aria-controls="navbarNavDropdown"
+					aria-expanded="false"
+					aria-label="Toggle navigation"
+				>
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarNavDropdown">
+					<ul class="navbar-nav">
+						<li class="nav-item">
+							<a class="nav-link active" aria-current="page" href="#">Home</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">Gallery</a>
+						</li>
+						<li class="nav-item dropdown">
+							<a
+								class="nav-link dropdown-toggle"
+								href="#"
+								role="button"
+								data-bs-toggle="dropdown"
+								aria-expanded="false"
+							>
+								Profile
+							</a>
+							<ul class="dropdown-menu">
+								<li><a class="dropdown-item" href="#">Settings</a></li>
+								<li><a class="dropdown-item" href="#">Logout</a></li>
+							</ul>
+						</li>
+					</ul>
+				</div>
+			</div>
 		</nav>
-		<h1>create anything</h1>
-		<input placeholder="a horse wearing a spacesuit" />
-		<button>submit</button>
+		<container id="userprompt" class="">
+			<h1>create anything</h1>
+			<input
+				class="form-control-lg"
+				placeholder="a horse wearing a spacesuit"
+			/>
+			<button class="btn btn-lg btn-warning">submit</button>
+		</container>
 		<footer></footer>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
 		<script src="./assets/js/script.js"></script>
