modified bootstrap in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 	</head>
 	<body>
 		<nav class="navbar navbar-expand-lg bg-light">
-			<div class="container-fluid">
+			<container class="container-fluid">
 				<a class="navbar-brand" href="#">headspace.ai</a>
 				<button
 					class="navbar-toggler"
@@ -54,9 +54,9 @@
 						</li>
 					</ul>
 				</div>
-			</div>
+			</container>
 		</nav>
-		<container id="userprompt" class="">
+		<container class="container-fluid">
 			<h1>create anything</h1>
 			<input
 				class="form-control-lg"
