--- a/public/index.html
+++ b/public/index.html
@@ -56,14 +56,14 @@
 				</div>
 			</container>
 		</nav>
-		<container class="container-fluid">
-			<h1>create anything</h1>
+		<h1 id="hero" class="d-flex m-5">create anything</h1>
+		<div class="d-flex align-items-start m-5">
 			<input
-				class="form-control-lg"
+				class="form-control-lg "
 				placeholder="a horse wearing a spacesuit"
 			/>
-			<button class="btn btn-lg btn-warning">submit</button>
-		</container>
+			<button class="btn btn-lg btn-warning mx-2">submit</button>
+		</div>
 		<footer></footer>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
 		<script src="./assets/js/script.js"></script>
