stylized html and css

--- a/public/index.html
+++ b/public/index.html
@@ -58,12 +58,12 @@
 			</container>
 		</nav>
 		<div class="">
-			<h1 id="hero" class="text-center my-3">dream up anything using AI</h1>
+			<h1 id="hero" class="text-center">dream up anything using AI</h1>
 			<div id="promptEl" class="">
 				<input
 					id="prompt"
 					class=""
-					placeholder="acrylic painting of the lo-fi beats girl writing code"
+					placeholder="acrylic painting of the lo-fi beats girl writing javascript"
 				/>
 				<button id="submit" class="">Dream</button>
 			</div>
