--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,15 @@
 			rel="stylesheet"
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
 		/>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Kanit:wght@300;500;900&display=swap"
+			rel="stylesheet"
+		/>
+		<style>
+			@import url("https://fonts.googleapis.com/css2?family=Kanit:wght@300;500;900&display=swap");
+		</style>
 		<link rel="stylesheet" href="./css/reset.css" />
 		<link rel="stylesheet" href="./css/style.css" />
 		<title>headspace.ai</title>
@@ -57,8 +66,10 @@
 				</div>
 			</container>
 		</nav>
-		<div class="">
-			<h1 id="hero" class="text-center">dream up anything using AI</h1>
+		<div id="heroEl" class="">
+			<h1 id="hero" class="text-center">
+				dream up anything with <span id="heroSpan">headspace.ai</span>
+			</h1>
 			<div id="promptEl" class="">
 				<input
 					id="prompt"
