--- a/public/gallery.html
+++ b/public/gallery.html
@@ -42,10 +42,10 @@
 				<div class="collapse navbar-collapse" id="navbarNavDropdown">
 					<div class="navbar-nav">
 						<div class="nav-item">
-							<a class="nav-link active" aria-current="page" href="#">Home</a>
+							<a class="nav-link" href="#">Home</a>
 						</div>
 						<div class="nav-item">
-							<a class="nav-link" href="#">Gallery</a>
+							<a class="nav-link active" aria-current="page" href="#">Gallery</a>
 						</div>
 						<div class="nav-item dropdown">
 							<a
