--- a/public/gallery.html
+++ b/public/gallery.html
@@ -45,7 +45,9 @@
 							<a class="nav-link" href="#">Home</a>
 						</div>
 						<div class="nav-item">
-							<a class="nav-link active" aria-current="page" href="#">Gallery</a>
+							<a class="nav-link active" aria-current="page" href="#"
+								>Gallery</a
+							>
 						</div>
 						<div class="nav-item dropdown">
 							<a
@@ -68,6 +70,19 @@
 				</div>
 			</container>
 		</nav>
+		<section id="galleryEl" class="">
+			<div class="card bg-dark">
+				<img id="placeholder" src="../public/assets/1024x1024.png" />
+
+				<div class="card-body">Content</div>
+				<div class="card-footer">Footer</div>
+			</div>
+			<div class="card bg-dark">
+				<img id="placeholder" src="../public/assets/1024x1024.png" />
+				<div class="card-body">Content</div>
+				<div class="card-footer">Footer</div>
+			</div>
+		</section>
 		<footer class="fixed-bottom"></footer>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
 		<script src="./assets/js/script.js"></script>
