finished register.html

--- a/public/register.html
+++ b/public/register.html
@@ -68,8 +68,11 @@
 				</div>
 			</container>
 		</nav>
-		<section id="loginEl" class="" style="font-family: 'Kanit', sans-serif;
-		font-weight: 400;">
+		<section
+			id="loginEl"
+			class=""
+			style="font-family: 'Kanit', sans-serif; font-weight: 400"
+		>
 			<div class="card mx-auto">
 				<div class="card-header">headspace.ai</div>
 				<div class="card-body">
@@ -97,7 +100,13 @@
 								placeholder="Password"
 							/>
 						</div>
-						<button type="submit" class="btn btn-warning" style="margin-top: 15px;">Submit</button>
+						<button
+							type="submit"
+							class="btn btn-warning"
+							style="margin-top: 15px"
+						>
+							Submit
+						</button>
 					</form>
 				</div>
 			</div>
