--- a/public/login.html
+++ b/public/login.html
@@ -68,36 +68,45 @@
 				</div>
 			</container>
 		</nav>
-		<section id="loginEl" class="" style="font-family: 'Kanit', sans-serif;
-		font-weight: 400;">
+		<section
+			id="loginEl"
+			class=""
+			style="font-family: 'Kanit', sans-serif; font-weight: 400"
+		>
 			<div class="card mx-auto">
 				<div class="card-header">headspace.ai</div>
 				<div class="card-body">
-					<h5 class="card-title">Register</h5>
+					<h5 class="card-title">Login</h5>
 					<form>
 						<div class="form-group">
-							<label for="emailForm">Email address</label>
+							<label for="emailUser">Email address</label>
 							<input
 								type="email"
 								class="form-control"
-								id="emailForm"
+								id="emailUser"
 								aria-describedby="emailHelp"
 								placeholder="Enter email"
 							/>
 							<small id="emailHelp" class="form-text text-muted"
-								>Have an account? <a href="">Login here instead.</a></small
+								>Want to sign up? <a href="">Register here instead.</a></small
 							>
 						</div>
 						<div class="form-group">
-							<label for="passwordForm">Password</label>
+							<label for="passwordUser">Password</label>
 							<input
 								type="password"
 								class="form-control"
-								id="passwordForm"
+								id="passwordUser"
 								placeholder="Password"
 							/>
 						</div>
-						<button type="submit" class="btn btn-warning" style="margin-top: 15px;">Submit</button>
+						<button
+							type="submit"
+							class="btn btn-warning"
+							style="margin-top: 15px; width: 200px"
+						>
+							Login
+						</button>
 					</form>
 				</div>
 			</div>
