--- a/public/register.html
+++ b/public/register.html
@@ -103,7 +103,7 @@
 						<button
 							type="submit"
 							class="btn btn-warning"
-							style="margin-top: 15px"
+							style="margin-top: 15px; width: 200px"
 						>
 							Submit
 						</button>
