added multiple placeholder cards to gallery.html

--- a/public/gallery.html
+++ b/public/gallery.html
@@ -70,24 +70,53 @@
 				</div>
 			</container>
 		</nav>
-		<section id="galleryEl" class="">
-			<div class="card bg-dark">
-				<img
-					id="placeholder"
-					src="../public/assets/1024x1024.png"
-					class="card-img-top"
-				/>
-				<div class="card-body">Content</div>
-				<div class="card-footer">Footer</div>
-			</div>
-			<div class="card bg-dark">
-				<img
-					id="placeholder"
-					src="../public/assets/1024x1024.png"
-					class="card-img-top"
-				/>
-				<div class="card-body">Content</div>
-				<div class="card-footer">Footer</div>
+		<section id="galleryEl" class="container-fluid d-flex">
+			<div class="row">
+				<div class="card bg-dark col-lg-3 col-md-5 col-sm-12 my-2 mx-2">
+					<img
+						id="placeholder"
+						src="../public/assets/1024x1024.png"
+						class="card-img-top mt-3"
+					/>
+					<div class="card-body">Content</div>
+					<div class="card-footer">Footer</div>
+				</div>
+				<div class="card bg-dark col-lg-3 col-md-5 col-sm-12 my-2 mx-2">
+					<img
+						id="placeholder"
+						src="../public/assets/1024x1024.png"
+						class="card-img-top mt-3"
+					/>
+					<div class="card-body">Content</div>
+					<div class="card-footer">Footer</div>
+				</div>
+				<div class="card bg-dark col-lg-3 col-md-5 col-sm-12 my-2 mx-2">
+					<img
+						id="placeholder"
+						src="../public/assets/1024x1024.png"
+						class="card-img-top mt-3"
+					/>
+					<div class="card-body">Content</div>
+					<div class="card-footer">Footer</div>
+				</div>
+				<div class="card bg-dark col-lg-3 col-md-5 col-sm-12 my-2 mx-2">
+					<img
+						id="placeholder"
+						src="../public/assets/1024x1024.png"
+						class="card-img-top mt-3"
+					/>
+					<div class="card-body">Content</div>
+					<div class="card-footer">Footer</div>
+				</div>
+				<div class="card bg-dark col-lg-3 col-md-5 col-sm-12 my-2 mx-2">
+					<img
+						id="placeholder"
+						src="../public/assets/1024x1024.png"
+						class="card-img-top mt-3"
+					/>
+					<div class="card-body">Content</div>
+					<div class="card-footer">Footer</div>
+				</div>
 			</div>
 		</section>
 		<footer class="fixed-bottom"></footer>
