--- a/public/gallery.html
+++ b/public/gallery.html
@@ -72,7 +72,8 @@
 		</nav>
 		<section id="galleryEl" class="container-fluid d-flex">
 			<div class="row">
-				<div class="card bg-dark col-lg-3 col-md-5 col-sm-12 my-2 mx-2">
+				<h1>Gallery</h1>
+				<div class="col-lg-4 col-md-5 col-sm-12">
 					<img
 						id="placeholder"
 						src="../public/assets/1024x1024.png"
@@ -81,7 +82,7 @@
 					<div class="card-body">Content</div>
 					<div class="card-footer">Footer</div>
 				</div>
-				<div class="card bg-dark col-lg-3 col-md-5 col-sm-12 my-2 mx-2">
+				<div class="col-lg-4 col-md-5 col-sm-12">
 					<img
 						id="placeholder"
 						src="../public/assets/1024x1024.png"
@@ -90,7 +91,7 @@
 					<div class="card-body">Content</div>
 					<div class="card-footer">Footer</div>
 				</div>
-				<div class="card bg-dark col-lg-3 col-md-5 col-sm-12 my-2 mx-2">
+				<div class="col-lg-4 col-md-5 col-sm-12">
 					<img
 						id="placeholder"
 						src="../public/assets/1024x1024.png"
@@ -99,7 +100,7 @@
 					<div class="card-body">Content</div>
 					<div class="card-footer">Footer</div>
 				</div>
-				<div class="card bg-dark col-lg-3 col-md-5 col-sm-12 my-2 mx-2">
+				<div class="col-lg-4 col-md-5 col-sm-12">
 					<img
 						id="placeholder"
 						src="../public/assets/1024x1024.png"
@@ -108,7 +109,7 @@
 					<div class="card-body">Content</div>
 					<div class="card-footer">Footer</div>
 				</div>
-				<div class="card bg-dark col-lg-3 col-md-5 col-sm-12 my-2 mx-2">
+				<div class="col-lg-4 col-md-5 col-sm-12">
 					<img
 						id="placeholder"
 						src="../public/assets/1024x1024.png"
