--- a/public/register.html
+++ b/public/register.html
@@ -42,12 +42,10 @@
 				<div class="collapse navbar-collapse" id="navbarNavDropdown">
 					<div class="navbar-nav">
 						<div class="nav-item">
-							<a class="nav-link" href="#">Home</a>
+							<a class="nav-link active" aria-current="page" href="#">Home</a>
 						</div>
 						<div class="nav-item">
-							<a class="nav-link active" aria-current="page" href="#"
-								>Gallery</a
-							>
+							<a class="nav-link" href="#">Gallery</a>
 						</div>
 						<div class="nav-item dropdown">
 							<a
@@ -70,53 +68,46 @@
 				</div>
 			</container>
 		</nav>
-		<section id="galleryEl" class="container-fluid d-flex">
-			<div class="row">
-				<h1 style="font-size: 40pt; text-align: center; margin-bottom: 30px;">Gallery</h1>
-				<div class="col-lg-4 col-md-6 col-sm-12">
-					<img
-						id="placeholder"
-						src="../public/assets/1024x1024.png"
-						class="card-img-top mt-3"
-					/>
-					<div class="card-body">Content</div>
-					<div class="card-footer">Footer</div>
-				</div>
-				<div class="col-lg-4 col-md-6 col-sm-12">
-					<img
-						id="placeholder"
-						src="../public/assets/1024x1024.png"
-						class="card-img-top mt-3"
-					/>
-					<div class="card-body">Content</div>
-					<div class="card-footer">Footer</div>
-				</div>
-				<div class="col-lg-4 col-md-6 col-sm-12">
-					<img
-						id="placeholder"
-						src="../public/assets/1024x1024.png"
-						class="card-img-top mt-3"
-					/>
-					<div class="card-body">Content</div>
-					<div class="card-footer">Footer</div>
-				</div>
-				<div class="col-lg-4 col-md-6 col-sm-12">
-					<img
-						id="placeholder"
-						src="../public/assets/1024x1024.png"
-						class="card-img-top mt-3"
-					/>
-					<div class="card-body">Content</div>
-					<div class="card-footer">Footer</div>
-				</div>
-				<div class="col-lg-4 col-md-6 col-sm-12">
-					<img
-						id="placeholder"
-						src="../public/assets/1024x1024.png"
-						class="card-img-top mt-3"
-					/>
-					<div class="card-body">Content</div>
-					<div class="card-footer">Footer</div>
+		<section
+			id="loginEl"
+			class=""
+			style="font-family: 'Kanit', sans-serif; font-weight: 400"
+		>
+			<div class="card mx-auto">
+				<div class="card-header">headspace.ai</div>
+				<div class="card-body">
+					<h5 class="card-title">Register</h5>
+					<form>
+						<div class="form-group">
+							<label for="emailForm">Email address</label>
+							<input
+								type="email"
+								class="form-control"
+								id="emailForm"
+								aria-describedby="emailHelp"
+								placeholder="Enter email"
+							/>
+							<small id="emailHelp" class="form-text text-muted"
+								>Have an account? <a href="">Login here instead.</a></small
+							>
+						</div>
+						<div class="form-group">
+							<label for="passwordForm">Password</label>
+							<input
+								type="password"
+								class="form-control"
+								id="passwordForm"
+								placeholder="Password"
+							/>
+						</div>
+						<button
+							type="submit"
+							class="btn btn-warning"
+							style="margin-top: 15px; width: 200px"
+						>
+							Submit
+						</button>
+					</form>
 				</div>
 			</div>
 		</section>
