--- a/public/userGallery.html
+++ b/public/userGallery.html
@@ -72,7 +72,7 @@
 		</nav>
 		<section id="galleryEl" class="container-fluid d-flex">
 			<div class="row">
-				<h1 style="font-size: 40pt; text-align: center; margin-bottom: 30px;">Gallery</h1>
+				<h1 style="font-size: 40pt; text-align: center; margin-bottom: 30px;">My Gallery</h1>
 				<div class="col-lg-4 col-md-6 col-sm-12">
 					<img
 						id="placeholder"
