--- a/public/gallery.html
+++ b/public/gallery.html
@@ -61,9 +61,8 @@
 							</a>
 							<ul class="dropdown-menu">
 								<li><a class="dropdown-item" href="#">Settings</a></li>
-								<li>
-									<a class="dropdown-item text-danger" href="#">Logout</a>
-								</li>
+								<li><a class="dropdown-item" href="#">History</a></li>
+								<li><a class="dropdown-item text-danger" href="#">Logout</a></li>
 							</ul>
 						</div>
 					</div>
