--- a/public/userGallery.html
+++ b/public/userGallery.html
@@ -61,9 +61,8 @@
 							</a>
 							<ul class="dropdown-menu">
 								<li><a class="dropdown-item" href="#">Settings</a></li>
-								<li>
-									<a class="dropdown-item text-danger" href="#">Logout</a>
-								</li>
+								<li><a class="dropdown-item" href="#">History</a></li>
+								<li><a class="dropdown-item text-danger" href="#">Logout</a></li>
 							</ul>
 						</div>
 					</div>
@@ -72,7 +71,9 @@
 		</nav>
 		<section id="galleryEl" class="container-fluid d-flex">
 			<div class="row">
-				<h1 style="font-size: 40pt; text-align: center; margin-bottom: 30px;">My Gallery</h1>
+				<h1 style="font-size: 40pt; text-align: center; margin-bottom: 30px">
+					My Gallery
+				</h1>
 				<div class="col-lg-4 col-md-6 col-sm-12">
 					<img
 						id="placeholder"
