finished result modal

--- a/public/index.html
+++ b/public/index.html
@@ -129,7 +129,7 @@
 							data-bs-dismiss="modal"
 						>
 							<i class="bi bi-arrow-repeat"></i>
-							 Try Again
+							Try Again
 						</button>
 						<input
 							id="resultShare"
@@ -138,14 +138,14 @@
 							id="privacy"
 							autocomplete="off"
 						/>
-						<label class="btn btn-outline-info mx-3" for="resultShare"
+						<label class="btn btn-outline-info" for="resultShare"
 							><i id="resultShareIcon" class="bi bi-lock"
 								><!-- <i class="bi bi-unlock-fill"></i> --></i
 							>
-							 Share on<b> headspace.ai</b></label
+							Share on<b> headspace.ai</b></label
 						>
 						<button id="resultSave" type="button" class="btn btn-warning">
-							 Save to Gallery
+							Save to Gallery
 						</button>
 					</div>
 				</div>
