--- a/public/index.html
+++ b/public/index.html
@@ -122,6 +122,14 @@
 						</div>
 					</div>
 					<div class="modal-footer">
+						<div>
+							<button
+								style="justify-self: left"
+								class="btn btn-outine-secondary"
+							>
+								<i class="bi bi-flag"></i> <u>Report</u>
+							</button>
+						</div>
 						<button
 							id="resultDismiss"
 							type="button"
