--- a/public/index.html
+++ b/public/index.html
@@ -79,6 +79,9 @@
 					class=""
 					placeholder="an acrylic painting of the lo-fi beats girl writing javascript"
 				/>
+				<div class="spinner-border text-warning" role="status">
+					<span class="visually-hidden">Loading...</span>
+				</div>
 				<button id="submit" class="">Dream</button>
 			</div>
 		</div>
