--- a/public/index.html
+++ b/public/index.html
@@ -42,10 +42,14 @@
 				<div class="collapse navbar-collapse" id="navbarNavDropdown">
 					<div class="navbar-nav">
 						<div class="nav-item">
-							<a class="nav-link active" aria-current="page" href="#">Home</a>
+							<a class="nav-link active" aria-current="page" href="#"
+								><i class="bi bi-brush-fill"></i> Create</a
+							>
 						</div>
 						<div class="nav-item">
-							<a class="nav-link" href="#">Gallery</a>
+							<a class="nav-link" href="#"
+								><i class="bi bi-grid-fill"></i> Gallery</a
+							>
 						</div>
 						<div class="nav-item dropdown">
 							<a
@@ -55,7 +59,7 @@
 								data-bs-toggle="dropdown"
 								aria-expanded="false"
 							>
-								Profile
+								<i class="bi bi-person-circle"></i> Profile
 							</a>
 							<ul class="dropdown-menu">
 								<li><a class="dropdown-item" href="#">Settings</a></li>
@@ -76,34 +80,16 @@
 			</h1>
 			<div id="promptEl" class="">
 				<input
-					id="prompt"
+					id="promptInput"
 					class=""
 					placeholder="an acrylic painting of the lo-fi beats girl writing javascript"
 				/>
-<!-- 				<div class="spinner-border text-warning" role="status">
+				<div id="spinner" class="spinner-border text-warning" role="status">
 					<span class="visually-hidden">Loading...</span>
-				</div> -->
-				<button
-					id="submit"
-					type="button"
-					data-bs-toggle="modal"
-					data-bs-target="#resultModal"
-				>
-					Dream
-				</button>
+				</div>
+				<button id="submit">Dream</button>
 			</div>
 		</div>
-
-		<!-- Button trigger moda
-		<button
-			type="button"
-			class="btn btn-primary"
-			data-bs-toggle="modal"
-			data-bs-target="#resultModal"
-		>
-			this button will be gone when our project is complete
-		</button> -->
-
 		<!-- result modal -->
 		<div
 			id="resultModal"
@@ -126,8 +112,8 @@
 								<div id="resultAside" class="col-lg-4 col-sm-12 my-auto">
 									<h2>"<span id="resultPrompt">Prompt goes here</span>"</h2>
 									<p>by</p>
-									<h4>Username goes here</h4>
-									<p>Dec 21st, 2022</p>
+									<h4 id="resultUser">Username goes here</h4>
+									<p id="resultDate">Dec 21st, 2022</p>
 								</div>
 							</div>
 						</div>
@@ -173,6 +159,6 @@
 
 		<footer class="fixed-bottom"></footer>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
-		<script src="./assets/js/script.js"></script>
+		<script src="./js/index.js"></script>
 	</body>
 </html>
