modified err modal

--- a/public/index.html
+++ b/public/index.html
@@ -104,8 +104,8 @@
 						></button>
 					</div>
 					<div class="modal-body">
-						<p>There's been an error with <b>headspace.ai</b>'s third party API.</p>
-						<p>This could have been a cause by a bug within our codebase, or more likely, because our OpenAI token budget has been depleted. <b>headspace.ai</b> is a student project built to showcase our progress for UConn's full-stack coding bootcamp. You can <a href="https://github.com/theLemmonade/project-headspace.ai" target="blank">learn more and support our work here</a>.
+						<p>There's been an error with the <b>headspace.ai</b> third party API.</p>
+						<p>This is probably because our <a href="https://beta.openai.com/docs/introduction" target="blank">token budget has been depleted.</a> <b>headspace.ai</b> is a student project built to showcase our progress for UConn's full-stack coding bootcamp. You can <a href="https://github.com/theLemmonade/project-headspace.ai" target="blank">learn more and support our work here</a>.
 						</p>
 					</div>
 					<div class="modal-footer">
