created email for us, added mailto: to report btns

--- a/public/index.html
+++ b/public/index.html
@@ -109,9 +109,9 @@
 						</p>
 					</div>
 					<div class="modal-footer">
-						<button style="justify-self: left" class="btn btn-outine-secondary">
+						<a href="mailto:headspace.ai+error@gmail.com" target="blank" style="justify-self: left" class="btn btn-outine-secondary">
 							<i class="bi bi-flag"></i> <u>Report</u>
-						</button>
+						</a>
 						<button
 							type="button"
 							class="btn btn-secondary"
@@ -153,12 +153,9 @@
 					</div>
 					<div class="modal-footer">
 						<div>
-							<button
-								style="justify-self: left"
-								class="btn btn-outine-secondary"
-							>
+							<a href="mailto:headspace.ai+content@gmail.com" target="blank" style="justify-self: left" class="btn btn-outine-secondary">
 								<i class="bi bi-flag"></i> <u>Report</u>
-							</button>
+							</a>
 						</div>
 						<button
 							id="resultDismiss"
