--- a/public/index.html
+++ b/public/index.html
@@ -104,12 +104,32 @@
 						></button>
 					</div>
 					<div class="modal-body">
-						<p>There's been an error with the <b>headspace.ai</b> third party API.</p>
-						<p>This is probably because our <a href="https://beta.openai.com/docs/introduction" target="blank">token budget has been depleted.</a> <b>headspace.ai</b> is a student project built to showcase our progress for UConn's full-stack coding bootcamp. You can <a href="https://github.com/theLemmonade/project-headspace.ai" target="blank">learn more and support our work here</a>.
+						<p>
+							There's been an error with the <b>headspace.ai</b> third party
+							API.
+						</p>
+						<p>
+							This is probably because our limited
+							<a href="https://beta.openai.com/docs/introduction" target="blank"
+								>token budget has been depleted.</a
+							>
+							<p></p>
+							<b>headspace.ai</b> is a student project built to showcase our
+							progress for UConn's full-stack coding bootcamp. You can
+							<a
+								href="https://github.com/theLemmonade/project-headspace.ai"
+								target="blank"
+								>learn more and support our work here</a
+							>.
 						</p>
 					</div>
 					<div class="modal-footer">
-						<a href="mailto:headspace.ai+error@gmail.com" target="blank" style="justify-self: left" class="btn btn-outine-secondary">
+						<a
+							href="mailto:headspace.ai+error@gmail.com"
+							target="blank"
+							style="justify-self: left"
+							class="btn btn-outine-secondary"
+						>
 							<i class="bi bi-flag"></i> <u>Report</u>
 						</a>
 						<button
@@ -153,7 +173,12 @@
 					</div>
 					<div class="modal-footer">
 						<div>
-							<a href="mailto:headspace.ai+content@gmail.com" target="blank" style="justify-self: left" class="btn btn-outine-secondary">
+							<a
+								href="mailto:headspace.ai+content@gmail.com"
+								target="blank"
+								style="justify-self: left"
+								class="btn btn-outine-secondary"
+							>
 								<i class="bi bi-flag"></i> <u>Report</u>
 							</a>
 						</div>
