--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
 		<title>headspace.ai</title>
 	</head>
 	<body>
+		<!-- nav el -->
 		<nav class="navbar navbar-expand-lg">
 			<container class="container-fluid">
 				<a class="navbar-brand" href="#">headspace.ai</a>
