--- a/public/gallery.html
+++ b/public/gallery.html
@@ -72,6 +72,7 @@
 		<section id="galleryEl" class="container-fluid d-flex">
 			<div class="row">
 				<h1 style="font-size: 40pt; text-align: center; margin-bottom: 30px;">Gallery</h1>
+				<!-- begin img partial -->
 				<div class="col-lg-4 col-md-6 col-sm-12">
 					<img
 						id="placeholder"
@@ -81,6 +82,7 @@
 					<div class="card-body">Content</div>
 					<div class="card-footer">Footer</div>
 				</div>
+				<!-- end img partial -->
 				<div class="col-lg-4 col-md-6 col-sm-12">
 					<img
 						id="placeholder"
