--- a/public/userGallery.html
+++ b/public/userGallery.html
@@ -74,6 +74,7 @@
 				<h1 style="font-size: 40pt; text-align: center; margin-bottom: 30px">
 					My Gallery
 				</h1>
+				<!-- begin img partial -->
 				<div class="col-lg-4 col-md-6 col-sm-12">
 					<img
 						id="placeholder"
@@ -83,6 +84,7 @@
 					<div class="card-body">Content</div>
 					<div class="card-footer">Footer</div>
 				</div>
+				<!-- end img partial -->
 				<div class="col-lg-4 col-md-6 col-sm-12">
 					<img
 						id="placeholder"
