--- a/public/index.html
+++ b/public/index.html
@@ -49,26 +49,18 @@
 						</div>
 						<div class="nav-item">
 							<a class="nav-link" href="#"
-								><i class="bi bi-grid-fill"></i> Gallery</a
+								><i class="bi bi-grid-fill"></i> Feed</a
 							>
 						</div>
-						<div class="nav-item dropdown">
-							<a
-								class="nav-link dropdown-toggle"
-								href="#"
-								role="button"
-								data-bs-toggle="dropdown"
-								aria-expanded="false"
+						<div class="nav-item">
+							<a class="nav-link" href="#"
+								><i class="bi bi-person-circle"></i> My Gallery</a
 							>
-								<i class="bi bi-person-circle"></i> Profile
-							</a>
-							<ul class="dropdown-menu">
-								<li><a class="dropdown-item" href="#">Settings</a></li>
-								<li><a class="dropdown-item" href="#">History</a></li>
-								<li>
-									<a class="dropdown-item text-danger" href="#">Logout</a>
-								</li>
-							</ul>
+						</div>
+						<div class="nav-item">
+							<a class="nav-link" href="#"
+								>Logout</a
+							>
 						</div>
 					</div>
 				</div>
