--- a/public/feed.html
+++ b/public/feed.html
@@ -62,7 +62,9 @@
 							<ul class="dropdown-menu">
 								<li><a class="dropdown-item" href="#">Settings</a></li>
 								<li><a class="dropdown-item" href="#">History</a></li>
-								<li><a class="dropdown-item text-danger" href="#">Logout</a></li>
+								<li>
+									<a class="dropdown-item text-danger" href="#">Logout</a>
+								</li>
 							</ul>
 						</div>
 					</div>
@@ -71,7 +73,16 @@
 		</nav>
 		<section id="galleryEl" class="container-fluid d-flex">
 			<div class="row">
-				<h1 style="font-size: 40pt; font-weight:600; text-align: center; margin-bottom: 30px;">Feed</h1>
+				<h1
+					style="
+						font-size: 40pt;
+						font-weight: 600;
+						text-align: center;
+						margin-bottom: 30px;
+					"
+				>
+					Feed
+				</h1>
 				<!-- begin img partial -->
 				<div class="col-lg-4 col-md-6 col-sm-12">
 					<img
