created login.js and assigned query selectors

--- a/public/login.html
+++ b/public/login.html
@@ -102,7 +102,7 @@
 						<div class="form-text">
 							Already have an account?
 							<button
-								class="toLogin"
+								id="toLog"
 								style="border: none; background: none; color: blue">
 								Sign in here.
 							</button>
@@ -148,7 +148,7 @@
 						<div class="form-text">
 							Don't have an account yet?
 							<button
-								class="toReg"
+								id="toReg"
 								style="border: none; background: none; color: blue">
 								Register here.
 							</button>
