--- a/public/login.html
+++ b/public/login.html
@@ -114,7 +114,7 @@
 								Sign in here.
 							</button>
 						</div>
-						<label for="regEmail" class="form-label">Email address</label>
+						<label for="regEmail" class="form-label">Email Address</label>
 						<input
 							id="regEmail"
 							type="email"
