--- a/public/login.html
+++ b/public/login.html
@@ -81,12 +81,12 @@
 				<div class="card-header">
 					<ul class="nav nav-tabs card-header-tabs">
 						<li class="nav-item">
-							<a
+							<button
 								id="regNav"
 								class="nav-link active"
 								style="color: rgb(90, 90, 90)"
 								aria-current="true"
-								>Register</a
+								>Register</button
 							>
 						</li>
 						<li class="nav-item mx-2">
